--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <h3>Valence</h3>
-    <p>Pellentesque mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <p>A measure from 0.0 to 1.0 describing the musical positiveness conveyed by a track. Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low valence sound more negative (e.g. sad, depressed, angry).</p>
     <div class="graphs valence">
       <svg id="omarValence" height="400px" width="400px"></svg>
       <svg id="sheetalValence" height="400px" width="400px"></svg>
@@ -35,7 +35,7 @@
     <p class="analysis">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
 
     <h3>Energy</h3>
-    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+    <p>A measure from 0.0 to 1.0 that represents a perceptual measure of intensity and activity. Typically, energetic tracks feel fast, loud, and noisy. For example, death metal has high energy, while a Bach prelude scores low on the scale. </p>
     <div class="graphs energy">
       <svg id="omarEnergy" height="400px" width="400px"></svg>
       <svg id="sheetalEnergy" height="400px" width="400px"></svg>
@@ -44,7 +44,7 @@
     <p class="analysis">Pellentesque mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
     <h3>Danceability</h3>
-    <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+    <p>Danceability describes how suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity. A value of 0.0 is least danceable and 1.0 is most danceable. </p>
     <div class="graphs danceability">
       <svg id="omarDanceability" height="400px" width="400px"></svg>
       <svg id="sheetalDanceability" height="400px" width="400px"></svg>
