--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
     <h3>Valence</h3>
     <p>A measure from 0.0 to 1.0 describing the musical positiveness conveyed by a track. Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low valence sound more negative (e.g. sad, depressed, angry).</p>
     <div class="graphs valence">
-      <svg id="omarValence" height="400px" width="400px"></svg>
-      <svg id="sheetalValence" height="400px" width="400px"></svg>
-      <svg id="alexaValence" height="400px" width="400px"></svg>
+      <svg id="omarValence" height="450px" width="400px"></svg>
+      <svg id="sheetalValence" height="450px" width="400px"></svg>
+      <svg id="alexaValence" height="450px" width="400px"></svg>
     </div>
-    <p class="analysis">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+    <p class="analysis">The class analysis for the Valence measure tells us that for all the three group members we see that their means lie lower than that of the US Top 2018 mean. Omar's mean lies a lot lower, with a greater difference between his mean and that of the US Top 2018, whereas Alexa and Sheetal are super close to the mean of the US Top 2018.</p>
 
     <h3>Energy</h3>
     <p>A measure from 0.0 to 1.0 that represents a perceptual measure of intensity and activity. Typically, energetic tracks feel fast, loud, and noisy. For example, death metal has high energy, while a Bach prelude scores low on the scale. </p>
     <div class="graphs energy">
-      <svg id="omarEnergy" height="400px" width="400px"></svg>
-      <svg id="sheetalEnergy" height="400px" width="400px"></svg>
-      <svg id="alexaEnergy" height="400px" width="400px"></svg>
+      <svg id="omarEnergy" height="450px" width="400px"></svg>
+      <svg id="sheetalEnergy" height="450px" width="400px" ></svg>
+      <svg id="alexaEnergy" height="450px" width="400px"></svg>
     </div>
-    <p class="analysis">Pellentesque mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <p class="analysis">The class analysis for the Energy measure contains an interesting behavior because Omar and Alexa both have their mean energy values lying a lot lower than that of the US Top 2018, but Sheetal's mean energy value is slightly above that of the US Top 2018.</p>
 
     <h3>Danceability</h3>
     <p>Danceability describes how suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity. A value of 0.0 is least danceable and 1.0 is most danceable. </p>
     <div class="graphs danceability">
-      <svg id="omarDanceability" height="400px" width="400px"></svg>
-      <svg id="sheetalDanceability" height="400px" width="400px"></svg>
-      <svg id="alexaDanceability" height="400px" width="400px"></svg>
+      <svg id="omarDanceability" height="450px" width="400px" ></svg>
+      <svg id="sheetalDanceability" height="450px" width="400px" ></svg>
+      <svg id="alexaDanceability" height="450px" width="400px"></svg>
     </div>
-    <p class="analysis">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+    <p class="analysis">The class analysis for the Danceability measure tells us that for all the three group members we see that their means lie lower than that of the US Top 2018 mean. All there group members have nearly the same difference between their Mean Danceability Values and that of the US Top 2018.</p>
 
     <script src="spotifyViz.js"></script>
   </body>
