added main project description

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>What Is Your Music Like?</h1>
     <h4>Omar Abdul-Rahim, Sheetal Athrey, Alexa Batino</h4>
-    <p class="description">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+    <p class="description"> Through this visualization, we wish to compare the US Top 100 songs of 2018 with the Top 100 songs of 2018 for each group member. In our comparison we compare three features that Spotify highlights for every songs, that is the Valence measure, the Energy Measure and the Danceability. Through this, we can analyze the variation of every group members most listened to songs of 2018 from that of the US Top 100, and can also predict the kind of songs each member favors.</p>
 
     <div class="legend">
       <span><strong>Legend:</strong></span>
