fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>What Is Your Music Like?</h1>
     <h4>Omar Abdul-Rahim, Sheetal Athrey, Alexa Batino</h4>
-    <p class="description"> Through this visualization, we wish to compare the US Top 100 songs of 2018 with the Top 100 songs of 2018 for each group member. In our comparison we compare three features that Spotify highlights for every songs, that is the Valence measure, the Energy Measure and the Danceability. Through this, we can analyze the variation of every group members most listened to songs of 2018 from that of the US Top 100, and can also predict the kind of songs each member favors.</p>
+    <p class="description"> Through this visualization, we wish to compare the US Top 100 songs of 2018 with the Top 100 songs of 2018 for each group member. In our comparison we compare three features that Spotify highlights for every songs, that is the Valence measure, the Energy Measure and the Danceability measure. Through this, we can analyze the variation of every group members most listened to songs of 2018 from that of the US Top 100, and can also predict the kind of songs each member favors.</p>
 
     <div class="legend">
       <span><strong>Legend:</strong></span>
@@ -32,7 +32,7 @@
       <svg id="sheetalValence" height="450px" width="400px"></svg>
       <svg id="alexaValence" height="450px" width="400px"></svg>
     </div>
-    <p class="analysis">The class analysis for the Valence measure tells us that for all the three group members we see that their means lie lower than that of the US Top 2018 mean. Omar's mean lies a lot lower, with a greater difference between his mean and that of the US Top 2018, whereas Alexa and Sheetal are super close to the mean of the US Top 2018.</p>
+    <p class="analysis">The class analysis for the Valence measure tells us that for all the three group members we see that their means lay lower than that of the US Top 2018 mean. Omar's mean lays a lot lower, with a greater difference between his mean and that of the US Top 2018, whereas Alexa and Sheetal are super close to the mean of the US Top 2018.</p>
 
     <h3>Energy</h3>
     <p>A measure from 0.0 to 1.0 that represents a perceptual measure of intensity and activity. Typically, energetic tracks feel fast, loud, and noisy. For example, death metal has high energy, while a Bach prelude scores low on the scale. </p>
@@ -50,7 +50,7 @@
       <svg id="sheetalDanceability" height="450px" width="400px" ></svg>
       <svg id="alexaDanceability" height="450px" width="400px"></svg>
     </div>
-    <p class="analysis">The class analysis for the Danceability measure tells us that for all the three group members we see that their means lie lower than that of the US Top 2018 mean. All there group members have nearly the same difference between their Mean Danceability Values and that of the US Top 2018.</p>
+    <p class="analysis">The class analysis for the Danceability measure tells us that for all the three group members we see that their means lay lower than that of the US Top 2018 mean. All there group members have nearly the same difference between their Mean Danceability Values and that of the US Top 2018.</p>
 
     <script src="spotifyViz.js"></script>
   </body>
