--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="header">
       <div class="headText">
-        <h1>What Is Our Music Like?</h1>
+        <h1> <b>What Is Our Music Like?</b> </h1>
         <h4>Omar Abdul-Rahim, Sheetal Athrey, Alexa Batino</h4>
         <p class="description"> In this data visualization, we compare the musical sentiment of each of our top 100 songs of 2018 with Spotify's 2018 U.S. Top 100. In our comparison, we compare three audio features provided by Spotify: valence, energy, and danceability. In doing this analysis, we learn about our own musical behavior and variation in comparison to the popular preferences of music listeners across the United States.</p>
       </div>
